force-app/main/default/objects/ssot__CustodyItemRelation__dlm/fields/ssot__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContextObject__c</fullName>
    <label>Context Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContextObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>