force-app/main/default/objects/ssot__CustodyItemRelation__dlm/fields/ssot__rel_1731658747569_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658747569_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyItemRelation_CustodyItemId_ma_rel</label>
    <referenceTo>ssot__CustodyItem__dlm</referenceTo>
    <relationshipLabel>CustodyItemRelation_CustodyItemId_ma_rel</relationshipLabel>
    <relationshipName>rel_1731658747569_end</relationshipName>
    <type>Lookup</type>
</CustomField>