force-app/main/default/objects/ssot__CustodyItemRelation__dlm/fields/ssot__rel_1731658750632_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658750632_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyItemRelation_ContextId_map_Co_rel</label>
    <referenceTo>ssot__Complaint__dlm</referenceTo>
    <relationshipLabel>CustodyItemRelation_ContextId_map_Co_rel</relationshipLabel>
    <relationshipName>rel_1731658750632_end</relationshipName>
    <type>Lookup</type>
</CustomField>